// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> should render a <Table> component with right columns 1`] = `
<ModeProvider
  columns={
    Object {
      "c": "C",
    }
  }
  data={
    Array [
      Object {
        "c": 5,
      },
      Object {
        "c": 10,
      },
    ]
  }
  dimensions={
    Object {
      "angle": 0,
      "height": 768,
      "width": 1024,
    }
  }
  innerRef={[Function]}
  mode="table"
/>
`;

exports[`<Table /> should render a <Table> component with sorted data 1`] = `
<ModeProvider
  data={
    Array [
      Object {
        "c": 15,
      },
      Object {
        "c": 10,
      },
    ]
  }
  dimensions={
    Object {
      "angle": 0,
      "height": 768,
      "width": 1024,
    }
  }
  innerRef={[Function]}
  mode="table"
  sortBy="c"
/>
`;

exports[`<Table /> should render a <Table> component with wrong columns 1`] = `
<ModeProvider
  columns={
    Object {
      "a": "A",
      "b": "B",
    }
  }
  data={
    Array [
      Object {
        "c": 5,
      },
      Object {
        "c": 10,
      },
    ]
  }
  dimensions={
    Object {
      "angle": 0,
      "height": 768,
      "width": 1024,
    }
  }
  innerRef={[Function]}
  mode="table"
/>
`;

exports[`<Table /> should render a <Table> component without data and custom placeholder 1`] = `
<ModeProvider
  data={Array []}
  dimensions={
    Object {
      "angle": 0,
      "height": 768,
      "width": 1024,
    }
  }
  innerRef={[Function]}
  mode="table"
  placeholder="No data"
/>
`;

exports[`<Table /> should render a <Table> component without headers 1`] = `
<ModeProvider
  data={
    Array [
      Object {
        "c": 15,
      },
      Object {
        "c": 10,
      },
    ]
  }
  dimensions={
    Object {
      "angle": 0,
      "height": 768,
      "width": 1024,
    }
  }
  innerRef={[Function]}
  mode="table"
  noHeader={true}
/>
`;

exports[`<Table /> should render cells with a custom renderer with card mode 1`] = `
<ModeProvider
  cellRenderer={[Function]}
  columns={
    Object {
      "age": "Age",
      "name": "Name",
    }
  }
  data={
    Array [
      Object {
        "age": 21,
        "name": Object {
          "first": "First",
          "last": "Entry",
        },
      },
      Object {
        "age": 25,
        "name": Object {
          "first": "Last",
          "last": "Entry",
        },
      },
    ]
  }
  dimensions={
    Object {
      "angle": 0,
      "height": 768,
      "width": 1024,
    }
  }
  innerRef={[Function]}
  mode="card"
/>
`;

exports[`<Table /> should render cells with a custom renderer with table mode 1`] = `
<ModeProvider
  cellRenderer={[Function]}
  columns={
    Object {
      "age": "Age",
      "name": "Name",
    }
  }
  data={
    Array [
      Object {
        "age": 21,
        "name": Object {
          "first": "First",
          "last": "Entry",
        },
      },
      Object {
        "age": 25,
        "name": Object {
          "first": "Last",
          "last": "Entry",
        },
      },
    ]
  }
  dimensions={
    Object {
      "angle": 0,
      "height": 768,
      "width": 1024,
    }
  }
  innerRef={[Function]}
  mode="table"
/>
`;

exports[`<Table /> should render cells with the default renderer with card mode 1`] = `
<ModeProvider
  columns={
    Object {
      "age": "Age",
      "name": "Name",
    }
  }
  data={
    Array [
      Object {
        "age": 21,
        "name": Object {
          "first": "First",
          "last": "Entry",
        },
      },
      Object {
        "age": 25,
        "name": Object {
          "first": "Last",
          "last": "Entry",
        },
      },
    ]
  }
  dimensions={
    Object {
      "angle": 0,
      "height": 768,
      "width": 1024,
    }
  }
  innerRef={[Function]}
  mode="card"
/>
`;

exports[`<Table /> should render cells with the default renderer with table mode 1`] = `
<ModeProvider
  columns={
    Object {
      "age": "Age",
      "name": "Name",
    }
  }
  data={
    Array [
      Object {
        "age": 21,
        "name": Object {
          "first": "First",
          "last": "Entry",
        },
      },
      Object {
        "age": 25,
        "name": Object {
          "first": "Last",
          "last": "Entry",
        },
      },
    ]
  }
  dimensions={
    Object {
      "angle": 0,
      "height": 768,
      "width": 1024,
    }
  }
  innerRef={[Function]}
  mode="table"
/>
`;
